--- a/index.Rmd
+++ b/index.Rmd
@@ -3,10 +3,10 @@ title: "Country-Specific Insights: Marathon Performance Analysis"
 subtitle: "London Marathon 2024"
 author: "reg-240227083"
 output:
-  pdf_document:
+    pdf_document:
     toc: true
     latex_engine: xelatex
-  html_document:
+    html_document:
     self_contained: true
     highlight: tango
     code_folding: show
@@ -16,7 +16,6 @@ output:
       collapsed: false
 always_allow_html: true
 date: "09/12/2024"
-runtime: shiny
 ---
 
 ```{r setup, include=FALSE}
@@ -424,8 +423,8 @@ server <- function(input, output) {
   })
 }
 
-shinyApp(ui, server)
 
+knitr::include_graphics("figs/viz240227083.png")
 ```
 
 
